--- a/apps/taller/templates/gestionar_slots.html
+++ b/apps/taller/templates/gestionar_slots.html
@@ -110,7 +110,7 @@
 							<div class="form-group row d-none">
 							<label for="id-edit" class="col-sm-2 col-form-label">ID de Slot</label>
 							<div class="col-sm-10">
-								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="" required="">
+								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="" required="" required="">
 							</div>
 						</div>
 
