--- a/apps/taller/templates/visitas/visitas-cliente.html
+++ b/apps/taller/templates/visitas/visitas-cliente.html
@@ -221,7 +221,7 @@
 				<label for="fecha-visita" class="col-sm-3 col-form-label">Fecha de Visita:</label>
 				<div class="col-sm-9">
 					<div class='input-group date' id='fecha-visita'>
-						<input type='text' name="fecha_visita" class="form-control">
+						<input type='text' name="fecha_visita" class="form-control" required="">
 						<span class="input-group-addon">
 							<span class="glyphicon glyphicon-calendar">&nbsp;&nbsp;<i class="fas fa-calendar-day fa-2x"></i></span>
 						</span>
