--- a/apps/taller/templates/base/base.html
+++ b/apps/taller/templates/base/base.html
@@ -13,7 +13,72 @@
 	<script src="{% static '/bootstrap/js/bootstrap.min.js' %}"></script>	<!-- no existe -->
 	<script src="{% static '/bootstrap/js/popper.min.js' %}"></script>		<!-- acá -->
 	<script src="{% static '/bootstrap/js/bootstrap-datetimepicker.min.js' %}"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 	
+	<meta name="author" content="Taller Ortiz - El Salvador">
+    <meta name=" keywords " content=" Taller Ortiz, Taller Automotriz El Salvador, Ortiz Automotriz, Reparación de Automoviles Ortiz El Salvador, visitanos Ortiz El Salvador ">
+    <meta name=" description " content="{%block desc1 %}Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. Tu información nunca será compartida. {%endblock%}">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="https://tallerortiz.com/static/img/logo.png">
+    <link rel="icon" href="/static/img/logo.png">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+	<meta name="robots" content="follow">
+	<meta name="robots" content="index">
+    <meta name="googlebot" content="index">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150458207-2"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+  		gtag('config', 'UA-150458207-2');
+	</script>
+
+	<script type="application/ld+json">
+			{
+  			"@context": "https://schema.org",
+  			"@type": "Organization",
+  			"url": "https://tallerortiz.com",
+  			"logo": "https://tallerortiz.com/static/img/logo.png"
+			}
+	</script>
+    <meta name="title" content="{%block titulo1 %}Taller Ortiz El Salvador - Tu mejor opción {%endblock%}">
+    <meta name="language" content="Spanish">
+    <meta name="Geography" content="El Salvador">
+    <meta name="Country" content="El Salvador">
+    <meta name="City" content="San Salvador">
+    <meta name="Copyright" content="tallerortiz.com">
+    <meta name="Designer" content="Taller Ortiz El Salvador.">
+    <meta name="Publisher" content="Taller_Ortiz_Project">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="cache-control" content="public">
+    <meta name="robots" content="index">
+    <meta name="robots" content="traslate">
+    <meta name="robots" content="Noimageindex">
+    <meta name="robots" content="follow">
+    <meta itemprop="image" content="https://tallerortiz.com/static/img/logo.png">
+
+    <meta property="og:title" content="{%block titulo2 %}Taller Ortiz El Salvador - Tu mejor opción {%endblock%}">
+    <meta property="og:type" content="Negocio de Reparaciones de Automoviles">
+    <meta property="og:url" content="{%block url1 %}https://tallerortiz.com/{%endblock%}">
+    <meta property="og:image" content="{%block image1 %}https://tallerortiz.com/static/img/logo.png{%endblock%}">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="800px">
+    <meta property="og:image:height" content="450px">
+    <meta property="og:image:alt" content="icono Taller Ortiz">
+    <meta property="og:description" content="{%block desc2 %} Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. Tu información nunca será compartida. {%endblock%} ">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://tallerortiz.com">
+    <meta name="twitter:creator" content="TallerOrtiz">
+    <meta name="twitter:site" content="@creacionesOrtiz">
+    <meta name="twitter:title" content="Pagina Web Creaciones del Taller Ortiz">
+    <meta name="twitter:description" content="{%block desc3 %} Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. Tu información nunca será compartida. {%endblock%} ">
+    <meta name="twitter:image" content="{%block image %}https://tallerortiz.com/static/img/logo.png{%endblock%}">
+
+
+
 	<link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap-datetimepicker.css' %}">	<!-- acá -->
 	<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/estilo.css' %}">
