--- a/apps/taller/templates/base/footer.html
+++ b/apps/taller/templates/base/footer.html
@@ -5,40 +5,19 @@
 				<!-- Content -->
 				<div class="col-md-6 mt-md-0 mt-3">
 					<h5 class="text-uppercase">Taller Ortiz</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae labore hic rem cumque. Illum dolorum soluta doloremque, deleniti excepturi fugiat, ut ex provident sunt libero voluptatem quo tempora, inventore, molestiae.</p>
+					<p>Empresa 100% salvadoreña profesional y con los mejores técnicos del país, dispuesta a darte los mejores servicios. </p>
 				</div>
 
 				<!-- Grid column -->
 				<hr class="clearfix w-100 d-md-none pb-3">
 
-				<!-- Links -->
-				<div class="col-md-3 mb-md-0 mb-3">
-					<h5 class="text-uppercase">Links</h5>
-					<ul class="list-unstyled">
-						<li>
-							<a href="#!">Link 1</a>
-						</li>
-						<li>
-							<a href="#!">Link 2</a>
-						</li>
-						<li>
-							<a href="#!">Link 3</a>
-						</li>
-					</ul>
-				</div>
 
 				<!-- Links -->
 				<div class="col-md-3 mb-md-0 mb-3">
 					<h5 class="text-uppercase">Links</h5>
 					<ul class="list-unstyled">
 						<li>
-							<a href="#!">Link 1</a>
-						</li>
-						<li>
-							<a href="#!">Link 2</a>
-						</li>
-						<li>
-							<a href="#!">Link 3</a>
+							<a class="animated infinite bounce flipInX" href="https://tallerortiz.com/html/politicas.html">Aviso Legal</a>
 						</li>
 					</ul>
 				</div>
