--- a/apps/taller/templates/contactos.html
+++ b/apps/taller/templates/contactos.html
@@ -1,4 +1,20 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Contactos{% endblock %}
-
+{%block desc1 %}Buscanos somos la mejor opción del mercado en cuanto a la reparación de vehiculos{%endblock%}
+{%block titulo1 %}Contacto - Taller Orti El Salvador{%endblock%}
+{%block titulo2 %}Contacto - Taller Orti El Salvador{%endblock%}
+{%block image1 %}https://www.formaciongcc.com/wp-content/uploads/2019/07/que-es-un-call-center.jpg{%endblock%}
+{%block desc2 %}Buscanos somos la mejor opción del mercado en cuanto a la reparación de vehiculos{%endblock%}
+{%block desc3 %}Buscanos somos la mejor opción del mercado en cuanto a la reparación de vehiculos{%endblock%}
+{%block url1 %}https://tallerortiz.com/contactos/{%endblock%}
+{% block title %}Contacto - Taller Ortiz El Salvador{% endblock %}
+{%block main_container %}
+	<img src="https://lh3.ggpht.com/p/AF1QipO5jeqDREd374IVZipWBZ-Mi0Jdnj_RvhcxM7JN=s1536" class="img-fluid" alt="Responsive image">
+	<hr>
+	<p></p>
+	<h1 class="display-3 animated shake" style="color: red; text-align: center;">Teléfono...</h1>
+	<p></p>
+	<a style="text-align: center;" class="display-3 animated infinite bounce pulse" href="tel:+50379193930">+503 7919-3930</a>
+	<hr>
+	<iframe class="display-3 animated pulse" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15500.039959939631!2d-89.1698992!3d13.778271!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x72be0eed36f40fb4!2sTaller%20Automotriz%20Ortiz!5e0!3m2!1ses!2ssv!4v1575356608657!5m2!1ses!2ssv" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+{% endblock %}
