--- a/apps/taller/templates/instalaciones.html
+++ b/apps/taller/templates/instalaciones.html
@@ -1,4 +1,16 @@
 {% extends 'base/base.html' %}
 
+{%block desc1 %}Contamos con amplias instalaciones a disponibilidad de nuestros clientes en la cuales operan los mejores técnicos automotrices del país. Tu auto en las mejores manos.{%endblock%}
+{%block titulo1 %}Instalaciones - Taller Ortiz El Salvador{%endblock%}
+{%block titulo2 %}Instalaciones - Taller Ortiz El Salvador{%endblock%}
+{%block image1 %}https://irp-cdn.multiscreensite.com/d74f58fd/MOBILE/jpg/204.jpg{%endblock%}
+{%block desc2 %}Contamos con amplias instalaciones a disponibilidad de nuestros clientes en la cuales operan los mejores técnicos automotrices del país. Tu auto en las mejores manos.{%endblock%}
+{%block desc3 %}Contamos con amplias instalaciones a disponibilidad de nuestros clientes en la cuales operan los mejores técnicos automotrices del país. Tu auto en las mejores manos.{%endblock%}
+{%block url1 %}https://tallerortiz.com/instalaciones/{%endblock%}
 
 {% block title %}Instalaciones{% endblock %}
+{%block main_container %}
+	<img src="https://irp-cdn.multiscreensite.com/d74f58fd/MOBILE/jpg/204.jpg" class="img-fluid" alt="Responsive image">
+	<h1 class="display-3 animated shake" style="color: red; text-align: center;">Contamos con modernas instalaciones hasta con 20 slot de capacidad...</h1>
+	<h4 class="display-3 animated flash" style="color: purple; text-align: center;">Exclusivos para nuestros clientes</h4>
+{% endblock %}
