--- a/apps/taller/templates/servicios.html
+++ b/apps/taller/templates/servicios.html
@@ -1,4 +1,20 @@
 {% extends 'base/base.html' %}
 
+{%block desc1 %}Ofrecemos a nuestros clientes servicios de alta calidad como lo son reparación de vehículos, cambio de aceites, cambio de motor, limpieza general o limpieza profunda, entre muchos más servicios.{%endblock%}
+{%block titulo1 %}Servicios - Taller Ortiz El Salvador{%endblock%}
+{%block titulo2 %}Servicios - Taller Ortiz El Salvador{%endblock%}
+{%block image1 %}https://entacna.org/assets/img/galeria/servicios_file_1534908537.jpg{%endblock%}
+{%block desc2 %}Ofrecemos a nuestros clientes servicios de alta calidad como lo son reparación de vehículos, cambio de aceites, cambio de motor, limpieza general o limpieza profunda, entre muchos más servicios.{%endblock%}
+{%block desc3 %}Ofrecemos a nuestros clientes servicios de alta calidad como lo son reparación de vehículos, cambio de aceites, cambio de motor, limpieza general o limpieza profunda, entre muchos más servicios.{%endblock%}
+{%block url1 %}https://tallerortiz.com/servicios/{%endblock%}
 
 {% block title %}Servicios{% endblock %}
+{%block main_container %}
+	<center><img src="https://lh3.ggpht.com/p/AF1QipPLaiPGwgMZY1rkISRn-uu6_SHx2WIsJr5LoiLc=s1536" width="40%" height="30%" class="img-fluid" alt="Responsive image"></center>
+	<h1 class="display-3 animated infinite bounce rubberBand">Pintura</h1>
+   <h4 class="animated bounceIn">Ofrecemos servicio de cambio de aceite y mantenimiento de flotas, realizamos reparaciones rápida de frenos, amortiguadores, cambios de aceites, filtros, pastillas de frenos…</h4>
+   <h1 class="display-3 animated infinite bounce rubberBand">Neumáticos</h1>
+   <h4 class="animated bounceIn">En nuestra sección de neumáticos disponemos de maquinaria para el cambio, equilibrado y alineado de su vehículo para que la conducción sea lo más cómoda y segura posible.</h4>
+   <h1 class="display-3 animated infinite bounce rubberBand">Mecánica rápida</h1>
+   <h4 class="animated bounceIn">En nuestra sección de mecánica rápida disponemos de servicios tales como: recogida y entrega del vehículo, cambio de aceite y filtros, recarga y cambio de baterías…</h4>
+{% endblock %}
