--- a/apps/taller/templates/base/header.html
+++ b/apps/taller/templates/base/header.html
@@ -33,8 +33,8 @@
 			<form class="form-inline my-2 my-lg-0">
 
 				{% if not request.user.is_authenticated %}
-					<a href="#" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Registrate&nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>&nbsp;&nbsp;&nbsp;
-					<a href="#" id="login-btn" onclick="openNav()" class="btn btn-success">Ingresa&nbsp;&nbsp;&nbsp;<i class="fas fa-sign-in-alt"></i></a>
+					<a href="#" class="btn btn-info animated pulse" data-toggle="modal" data-target="#exampleModal">Registrate&nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>&nbsp;&nbsp;&nbsp;
+					<a href="#" id="login-btn" onclick="openNav()" class="btn btn-success animated tada">Ingresa&nbsp;&nbsp;&nbsp;<i class="fas fa-sign-in-alt"></i></a>
 				{% else %}
 					<span class="btn btn-success" id="btn-login">
 						{{request.user.first_name}}&nbsp;&nbsp;&nbsp;-&nbsp;
@@ -53,6 +53,10 @@
 			</form>
 
 		</div>
+		
+
+
+
 
 	</nav>
 
